kubernetes-manifest/cms.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
spec:
  selector:
    app: cms
  ports:
    - targetPort: 9081
      port: 80
      name: http-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  labels:
    app: cms
spec:
  replicas: 1
  template:
    metadata:
      name: cms
      labels:
        app: cms
    spec:
      hostAliases:
        - ip: "192.168.64.6"
          hostnames:
            - "tcs.ecs.baylor.edu"
      containers:
        - name: cms
          image: cloudhubs2/tms-cms
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9081
      restartPolicy: Always
  selector:
    matchLabels:
      app: cms
---
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: cms
#spec:
#  rules:
#    - host: cms.test
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: cms
#                port:
#                  number: 80
