kubernetes-manifest/ems.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems
spec:
  selector:
    app: ems
  ports:
    - port: 80
      targetPort: 9001

  type: NodePort
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems
  labels:
    app: ems
spec:
  replicas: 1
  template:
    metadata:
      name: ems
      labels:
        app: ems
    spec:
      containers:
        - name: ems
          image: cloudhubs2/tms-ems
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
      restartPolicy: Always
  selector:
    matchLabels:
      app: ems
