kubernetes-manifest/keycloack.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: cloudhubs2/tms-keycloak
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: keycloak
