kubernetes-manifest/ums-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums-client
spec:
  selector:
    app: ums-client
  ports:
    - port: 80
      name: http-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums-client
  labels:
    app: ums-client
spec:
  replicas: 1
  template:
    metadata:
      name: ums-client
      labels:
        app: ums-client
    spec:
      hostAliases:
        - ip: "192.168.64.7"
          hostnames:
            - "tcs.ecs.baylor.edu"
      containers:
        - name: ums-client
          image: cloudhubs2/tms-ums-client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: ums-client
