kubernetes-manifest/istio-serviceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: details-svc
  namespace: test
spec:
  hosts:
    - tcs.ecs.baylor.edu
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  workloadSelector:
    labels:
      app: keycloak
---
