kubernetes-manifest/qms.yaml
apiVersion: v1
kind: Service
metadata:
  name: qms
spec:
  selector:
    app: qms
  ports:
    - targetPort: 80
      port: 80
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qms
  labels:
    app: qms
spec:
  replicas: 1
  template:
    metadata:
      name: qms
      labels:
        app: qms
    spec:
      hostAliases:
        - ip: "192.168.64.5"
          hostnames:
            - "tcs.ecs.baylor.edu"
      containers:
        - name: qms
          image: cloudhubs2/tms-qms
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: qms
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qms

spec:
  rules:
    - host: qms.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qms
                port:
                  number: 80
